baml_language/crates/baml_tests/snapshots/compiles/test_with_not_keyword/baml_tests__compiles__test_with_not_keyword__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Foo {
  x: int
}
class user.HasWith {
  with: int
}
function user.$init_test_27(registry: testing.TestCollector) -> ?  [expr] {
  { registry.register_test("with as field", () -> void { { let h = user.HasWith { with: 1 } } assert.equal(h.with, 1) }, null) } null
}
function user.make_foo() -> user.Foo  [expr] {
  {  } user.Foo { x: 1 }
}
function user.use_with_as_var() -> int  [expr] {
  { let with = 42 } with
}
