baml_language/crates/baml_tests/snapshots/compiles/test_with_not_keyword/baml_tests__compiles__test_with_not_keyword__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 32516
---
=== PPIR ===
class user.Foo {
  x: int
}
class user.Foo$stream {
  x: int | null
}
class user.HasWith {
  with: int
}
class user.HasWith$stream {
  with: int | null
}
function user.$init_test_main(registry: testing.TestCollector) -> ?  [expr] {
  { registry.register_test("with as field", () -> void { { let h = user.HasWith { with: 1 } } assert.equal(h.with, 1) }, null) } null
}
function user.make_foo() -> user.Foo  [expr] {
  {  } user.Foo { x: 1 }
}
function user.use_with_as_var() -> int  [expr] {
  { let with = 42 } with
}
