baml_language/crates/baml_tests/snapshots/compiles/test_with_not_keyword/baml_tests__compiles__test_with_not_keyword__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.$init_test_25(registry: testing.TestCollector) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: testing.TestCollector // registry // param
    let _2: void
    let _3: () -> void throws unknown

    bb0: {
        _3 = make_closure lambda[0]();
        _2 = call const fn testing.TestCollector.register_test(copy _1, const "with as field", copy _3, const null) -> [bb1];
    }

    bb1: {
        _0 = const null;
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

// lambda[0]
fn .<lambda($init_test_25, 0)>() -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: HasWith // h
    let _2: int

    bb0: {
        _1 = user.HasWith { const 1_i64 };
        _2 = copy _1.0;
        _0 = call const fn assert.equal(copy _2, const 1_i64) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.make_foo() -> Foo {
    // Locals:
    let _0: Foo // _0 // return

    bb0: {
        _0 = user.Foo { const 1_i64 };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.use_with_as_var() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // with

    bb0: {
        _1 = const 42_i64;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
