baml_language/crates/baml_tests/snapshots/compiles/test_with_not_keyword/baml_tests__compiles__test_with_not_keyword__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Foo {
  x: int
}
function user.make_foo() -> user.Foo throws never {
  { : user.Foo
    Foo { x: 1 } : user.Foo
  }
}
function user.use_with_as_var() -> int throws never {
  { : int
    let with = 42 : 42 -> int
    with : int
  }
}
class user.HasWith {
  with: int
}
function user.$init_test_25(registry: testing.TestCollector) -> ? throws never {
  { : null
    registry.register_test("with as field", () -> void { ... }, null) : void
      () -> void { ... } : () -> void throws unknown
        {
          let h = HasWith { with: 1 }
          assert.equal(h.with, 1)
        }
    null : null
  }
}
lambda user.$init_test_25 {
}
class user.Foo$stream {
  x: null | int
}
class user.HasWith$stream {
  with: null | int
}
