baml_language/crates/baml_tests/snapshots/compiles/test_with_not_keyword/baml_tests__compiles__test_with_not_keyword__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 20513
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
