baml_language/crates/baml_tests/snapshots/compiles/test_with_not_keyword/baml_tests__compiles__test_with_not_keyword__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init_test() -> null {
    load_var ?1
    call ?
    pop 1
    load_const ?
    return
}

function user.$init_test_32(registry: testing.TestCollector) -> null {
    load_var registry
    load_const "with as field"
    make_closure .<lambda($init_test_32, 0)>, 0
    load_const null
    call testing.TestCollector.register_test
    pop 1
    load_const null
    return
}

function user.Foo.from_json(j: baml.json.json) -> Foo {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type Foo
    load_var _2
    call baml.json.from_string
    return
}

function user.Foo.to_json(self: null) -> baml.json.json {
    load_type Foo
    load_var self
    call baml.json.to_string
    call baml.json.parse
    return
}

function user.HasWith.from_json(j: baml.json.json) -> HasWith {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type HasWith
    load_var _2
    call baml.json.from_string
    return
}

function user.HasWith.to_json(self: null) -> baml.json.json {
    load_type HasWith
    load_var self
    call baml.json.to_string
    call baml.json.parse
    return
}

function user.make_foo() -> Foo {
    alloc_instance user.Foo
    load_const 1
    init_field .x
    return
}

function user.use_with_as_var() -> int {
    load_const 42
    return
}
